# kotva

./: .gitignore  00-overview.md  01-identity.md  02-mote.md  03-naming.md  04-transport.md  05-messaging.md  06-privacy.md  07-gateway.md  08-clients.md  09-anti-abuse.md  10-conformance.md  11-grounding-and-references.md  12-operators.md  13-identity-auth.md  14-scaling.md  15-references.md  16-parameters.md  17-parity.md  18-wire-format.md  19-operations.md  20-state-machines.md  21-errors-iana.md  22-public-objects.md  23-cad-artifact-profile.md  24-video-profile.md  25-pubsub.md  26-legacy-adapters.md  27-realtime-media.md  CHANGELOG.md  Cargo.toml  DIRECTION.md  GOVERNANCE.md  LICENSE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  STYLE.md  (+1 more)
bindings/: README.md
conformance/: README.md  SUITE.md  scope.json  suite.json
conformance/vectors/: gen_pub_vectors.py  gen_sync_vectors.py  pub_vectors.json  sync_vectors.json  vectors.json  verify_pub_vectors.py
coordinator/: CONTRACT.md
crates/kotva-mail/: Cargo.toml  README.md
docs/: SPEC-PERFECTION.md
docs/research/: PRIMITIVES.md  README.md  coverage-matrix.md  mixnet.md  vdf.md
draft/: preamble.tex
primitives/: ATTEST.md  ESCROW.md  MATCH.md  OFFER.md  REPUTATION.md  RESERVE.md
profiles/: cloud.md  media.md  reachability.md  rtc.md  search.md  social.md
profiles/tract/: .gitignore  00-overview.md  01-actors.md  02-catalogue.md  03-availability.md  04-fulfilment.md  05-consideration.md  06-cart.md  07-order.md  08-delivery.md  09-settlement.md  10-trust.md  11-jurisdiction.md  12-gateway.md  13-analytics.md  14-anti-abuse.md  15-conformance.md  16-wire-format.md  17-errors-iana.md  18-state-machines.md  19-parameters.md  20-references.md  21-grounding.md  22-erasure.md  AUTHORING-BRIEF.md  CHANGELOG.md  FOUNDER-DECISIONS-TRACT.md  GOVERNANCE.md  LICENSE.md  Makefile  README.md  ROADMAP.md  SECURITY.md
profiles/tract/conformance/: SUITE.md
profiles/tract/docs/: DECISION-vat-facilitator.md  DECISIONS.md  HELP-WANTED.md
profiles/tract/tools/: lint.py
profiles/wrap/: .gitignore  00-overview.md  01-identity.md  02-objects.md  03-wire-format.md  04-signing.md  05-lifecycle.md  06-merge.md  07-pools.md  08-trust.md  09-fulfilment.md  10-transport.md  11-profiles.md  12-errors.md  13-security.md  14-conformance.md  15-references.md  CHANGELOG.md  LICENSE.md  README.md
profiles/wrap/conformance/: README.md  gen_wrap_vectors.py  (+1 more)
substrate/: ADOPTION.md  BINDINGS.md  FEEDS.md  IDENTITY.md  OFFLINE.md  README.md  ROLES.md  SYNC.md
tools/: lint.py
web/: whitepaper.html
(+2 files in other folders)
