[package]
name = "kotva-mail"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
# KOTVA-Mail (a.k.a. DMTAP) server layer. Carved from envoir's `dmtap-mail`; shared by the envoir
# node and the Ephor mail gateway (the mail-adapter coordinator kind). Pinned by tag.
description = "KOTVA-Mail (DMTAP) server layer — IMAP4rev2/rev1, SMTP submission, POP3, JMAP, and autodiscovery servers projecting the MOTE store for legacy and modern mail clients"
repository = "https://github.com/vul-os/kotva"
homepage = "https://github.com/vul-os/kotva"
keywords = ["kotva", "email", "imap", "smtp", "jmap"]
categories = ["email", "network-programming"]

# The protocol *core* (parsers, response encoders, state machines, the MailStore projection of
# the MOTE store) is synchronous and std-only, so it always builds and is fully unit/integration
# testable offline. Real TCP listeners live behind the optional `net` feature (std threads only —
# no async runtime is required). See README.md for the capability/extension matrix.

[features]
default = []
# `net` adds blocking std::net TCP listeners (thread-per-connection) that drive the synchronous
# session state machines. It pulls in NO extra crates — everything is std.
net = []

[dependencies]
# Shared KOTVA substrate — the MOTE object, identity, key-name (spec §1, §2, §3.9).
kotva-core = { path = "../kotva-core" }
# JMAP is JSON over HTTP (RFC 8620/8621) — real request/response (de)serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ergonomic error enums (already in the workspace lock via dmtap-core).
thiserror = "1"

[dev-dependencies]
# Integration test drives a scripted IMAP session against the in-memory MailStore.
